--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,6 @@
 
       <!-- Контент -->
     </main>
-    <script src="../src/main.js"></script>
+    <script src="../src/build.js"></script>
   </body>
 </html>
